# spaceship-control

./: .env  .gitignore  docker-compose.yml  readme.md  relationships.yml  spaceship.proto  spaceship.schema  spaceship.zaml  spaceship.zed  spaceship2.zaml  spaceship_pb2.py  spaceship_pb2_grpc.py  star-trek.zed  tes.md  tomorrow.txt
nodejs/: README.md  package-lock.json  package.json  test.txt
nodejs/src/: authzed-run.js  authzed-server.js  authzed-server.mjs  crdb-client.js  dot.mjs  grpc-server.js  pg-server.js  test.html
nodejs/src/lib/: authzed.js  authzed.mjs  authzed.test.js  cli.js  dot.js  dot.mjs  dot.test.js  iterm2.mjs
python/: README.md  pyproject.toml  requirements.txt
python/src/: main.py
scripts/: connect.sh  init_cr.sh  init_spicedb.sh  make_certs.sh  wait-for.sh
